[gd_scene load_steps=16 format=2]

[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://entities/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://hud/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/EnemySpawnTimer.gd" type="Script" id=5]
[ext_resource path="res://entities/Shield.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/SlowMotion.tscn" type="PackedScene" id=7]
[ext_resource path="res://Background.tscn" type="PackedScene" id=8]
[ext_resource path="res://menus/PauseMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/Explosion.tscn" type="PackedScene" id=10]
[ext_resource path="res://sounds/explosion.wav" type="AudioStream" id=11]
[ext_resource path="res://hud/GameOverScreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://sounds/high_score.wav" type="AudioStream" id=13]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="Animation" id=2]
resource_name = "Flash"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.607843, 0.737255, 0.0588235, 1 ), Color( 0.607843, 0.737255, 0.0588235, 0 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
Player = ExtResource( 1 )
Enemy = ExtResource( 3 )
powerup_scenes = [ ExtResource( 6 ), ExtResource( 7 ) ]
explosion_scene = ExtResource( 10 )
high_score_sound = ExtResource( 13 )
explosion_sound = ExtResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" parent="BackgroundLayer" instance=ExtResource( 8 )]

[node name="SlowMotion" type="ColorRect" parent="BackgroundLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 0.960784, 0, 0.219608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 5 )
initial_wait_time = 1.0
wait_time_decrement = 0.025

[node name="PickupSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="SlowMotionTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Spawner" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Position" type="PathFollow2D" parent="Spawner"]
rotate = false

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="Flash" type="ColorRect" parent="HUDLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.607843, 0.737255, 0.0588235, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUDLayer/Flash"]
anims/Flash = SubResource( 2 )

[node name="HUD" parent="HUDLayer" instance=ExtResource( 4 )]
margin_top = -1.25993
margin_bottom = -1.25995

[node name="PauseMenu" parent="HUDLayer" instance=ExtResource( 9 )]
visible = false

[node name="GameOverScreen" parent="HUDLayer" instance=ExtResource( 12 )]
visible = false
[connection signal="high_score_surpassed" from="." to="HUDLayer/HUD" method="_on_Main_high_score_surpassed"]
[connection signal="high_score_surpassed" from="." to="." method="_on_high_score_surpassed"]
[connection signal="level_changed" from="." to="HUDLayer/HUD" method="_on_Main_level_changed"]
[connection signal="score_changed" from="." to="HUDLayer/HUD" method="_on_Main_score_changed"]
[connection signal="score_changed" from="." to="." method="_on_score_changed"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="PickupSpawnTimer" to="." method="_on_PickupSpawnTimer_timeout"]
[connection signal="timeout" from="SlowMotionTimer" to="." method="_on_SlowMotionTimer_timeout"]
[connection signal="hide" from="HUDLayer/PauseMenu" to="." method="_on_PauseMenu_hide"]
